# test_poetry

./: .gitignore  LICENSE  README.md  check.py  pyproject.toml  pyproject.toml~  setup.py
.github/workflows/: publish-to-test-pypi.yml  pullrequestchecks.yml  pullrequestchecks_yml.txt  unittest.yml
demo_data/: example_input_001.csv  example_input_002.csv  example_input_003.csv
process/: allin.py
project_002/: maths.py
sup_002/: hello.py
tests/: test_project_002.py  test_project_002.py~
