[tool.poetry]
name = "project_002"
version = "0.1.1"
description = "A test project with two folders does nothing interesting"
authors = ["Helen Duncan <hduncan@turing.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.21.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
black = "^21.7b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
